Replaced sword with AS crystal sword in end chest
Added alt recipe for flint and steel that doesn't require tech
Botania starting quest now properly shows when either psi or blood magic prereq is completed
Lowered mana cost of processing osmatic steel
Added additional recipe for mitherial -> mana infused dust
Fixed tungeston processing with mekanism

2.9.1
---------- 
Fixed quest book starting in edit mode

2.9.0
---------- 
Changed starting botania quest to require either evilcraft or psi rather than both
Removed unused drying bin recipe
Fixed a few typos in quest book
Night Light quest now accepts either regular or celestial crystal
Blacklist bunch of AS items from cardboard box to avoid upsetting the sensitive light network
Slightly altar mana infused metal process for... reasons 
Added glass shards to recycle glass bottles
Fixed marimorph quest
Changed many magneticraft recipes to use oredict plates
Magneticraft ore chunks all smelt to 2 ingots now
Fixed sandstone crushing table recipe
Added a recipe for screws
Fixed an uncraftable botania flower
Mod Updates:
* Silent Gems - Stone Torches!
* Steve's Cart Reborn
New Mods: 
* Hunger In Peace - Requested by multiple players

2.8.0
---------- 
Fleshed out the final tech chapter with more quests
Added rewards to advanced/mastery tech chapters and later magic chapter
Made infusion crafter tier upgrade recipes more difficult
Enabled setting for players to delete their own RF dimension
Decreased rarity 0 dimlet chance and increase rarity 6 
Slightly increase dimension shard ore generation
Increased rates of unusual liquids randomly chosen in dims
Added alt recipe for calc electric diamonds
Fixed solid heart item being eaten by ae2 crafting (probably)
Fixed laser colors for empowerer recipes
Actually removed the temp conductor mast recipes this time
Fixed royal jelly recipes
Fixed pure daisy recipe being very picky about how logs are placed
Chorus fruit now smelts into a small amount of resonant ender