@@ -152,7 +152,7 @@ turbine {
 
 worldgen {
     # Enable generation of Anglesite ore
-    B:anglesiteOreEnableWorldGen=true
+    B:anglesiteOreEnableWorldGen=false
 
     # Maximum number of Anglesite clusters per chunk
     I:anglesiteOreMaxClustersPerChunk=1
@@ -161,7 +161,7 @@ worldgen {
     I:anglesiteOrePerCluster=4
 
     # Enable generation of Benitoite ore
-    B:benitoiteOreEnableWorldGen=true
+    B:benitoiteOreEnableWorldGen=false
 
     # Maximum number of Benitoite clusters per chunk
     I:benitoiteOreMaxClustersPerChunk=2
