@@ -1,6 +1,6 @@
 #Inventory Tweaks Configuration
 #(Regarding shortcuts, all key names can be found at: http://legacy.lwjgl.org/javadoc/org/lwjgl/input/Keyboard.html)
-#Mon Mar 26 19:54:58 EDT 2018
+#Tue Mar 27 21:10:09 EDT 2018
 enableMiddleClick=true
 showChestButtons=true
 enableSortingOnPickup=false
