@@ -51,6 +51,7 @@ singularity {
     # - 'color' the color of the singularity as a hex value. http://htmlcolorcodes.com/
     # - Example: 123456 would color it as whatever that color is.
     S:_custom_singularities <
+        99;clay;minecraft:clay_ball;ABA5A3
      >
 
     # The amount of materials required to create a Singularity, for the default recipes. [range: 1 ~ 2147483647, default: 10000]
