@@ -528,7 +528,7 @@ world2177 {
 
     # Hide and unhide items by clicking them in the item list.
     B:editEnabled=false
-    S:filterText=flint
+    S:filterText=singu
 
     # Show the list of items next to open guis.
     B:overlayEnabled=true
