@@ -1,5 +1,5 @@
 #Splash screen properties
-#Mon Mar 26 19:52:27 EDT 2018
+#Tue Mar 27 21:07:40 EDT 2018
 background=0xFFFFFF
 memoryGood=0x78CB34
 font=0x0
